--- a/manifest.json
+++ b/manifest.json
@@ -14,8 +14,7 @@
       "react-native-electrode-bridge@1.5.5",
       "react-native-location@0.27.0"
     ],
-    "targetJsDependencies": [
-    ]
+    "targetJsDependencies": []
   },
   {
     "platformVersion": "0.6.x",
@@ -23,9 +22,7 @@
       "react-native@0.48.3",
       "react-native-electrode-bridge@1.5.10"
     ],
-    "targetJsDependencies": [
-      "react@16.0.0-alpha.12"
-    ]
+    "targetJsDependencies": ["react@16.0.0-alpha.12"]
   },
   {
     "platformVersion": "0.7.x",
@@ -37,9 +34,7 @@
       "react-native-linear-gradient@2.3.0",
       "react-native-code-push@5.1.3-beta"
     ],
-    "targetJsDependencies": [
-      "react@16.0.0-alpha.12"
-    ]
+    "targetJsDependencies": ["react@16.0.0-alpha.12"]
   },
   {
     "platformVersion": "0.8.x",
@@ -51,9 +46,7 @@
       "react-native-linear-gradient@2.3.0",
       "react-native-code-push@5.1.3-beta"
     ],
-    "targetJsDependencies": [
-      "react@16.0.0-beta.5"
-    ]
+    "targetJsDependencies": ["react@16.0.0-beta.5"]
   },
   {
     "platformVersion": "0.9.x",
@@ -65,9 +58,7 @@
       "react-native-linear-gradient@2.3.0",
       "react-native-code-push@5.1.3-beta"
     ],
-    "targetJsDependencies": [
-      "react@16.0.0-beta.5"
-    ]
+    "targetJsDependencies": ["react@16.0.0-beta.5"]
   },
   {
     "platformVersion": "0.10.x",
@@ -80,9 +71,7 @@
       "react-native-code-push@5.1.3-beta",
       "react-native-android-settings-library@1.0.3"
     ],
-    "targetJsDependencies": [
-      "react@16.0.0"
-    ]
+    "targetJsDependencies": ["react@16.0.0"]
   },
   {
     "platformVersion": "0.11.x",
@@ -98,9 +87,7 @@
       "react-native-lluploader@0.1.0",
       "react-native-llphotoassets@0.0.2"
     ],
-    "targetJsDependencies": [
-      "react@16.0.0"
-    ]
+    "targetJsDependencies": ["react@16.0.0"]
   },
   {
     "platformVersion": "0.12.x",
@@ -116,9 +103,7 @@
       "react-native-lluploader@0.1.0",
       "react-native-llphotoassets@0.0.2"
     ],
-    "targetJsDependencies": [
-      "react@16.2.0"
-    ]
+    "targetJsDependencies": ["react@16.2.0"]
   },
   {
     "platformVersion": "0.13.x",
@@ -137,9 +122,7 @@
       "react-native-exif@0.1.7",
       "react-native-view-shot@2.3.0"
     ],
-    "targetJsDependencies": [
-      "react@16.2.0"
-    ]
+    "targetJsDependencies": ["react@16.2.0"]
   },
   {
     "platformVersion": "0.14.x",
@@ -159,9 +142,7 @@
       "react-native-view-shot@2.3.0",
       "react-native-camera@1.0.1"
     ],
-    "targetJsDependencies": [
-      "react@16.2.0"
-    ]
+    "targetJsDependencies": ["react@16.2.0"]
   },
   {
     "platformVersion": "0.15.x",
@@ -181,11 +162,8 @@
       "react-native-view-shot@2.3.0",
       "react-native-camera@1.0.2",
       "react-native-permissions@1.1.1"
-
     ],
-    "targetJsDependencies": [
-      "react@16.3.0-alpha.1"
-    ]
+    "targetJsDependencies": ["react@16.3.0-alpha.1"]
   },
   {
     "platformVersion": "0.16.x",
@@ -206,11 +184,8 @@
       "react-native-camera@1.0.2",
       "react-native-permissions@1.1.1",
       "react-native-fbsdk@0.7.0"
-
     ],
-    "targetJsDependencies": [
-      "react@16.3.0-alpha.1"
-    ]
+    "targetJsDependencies": ["react@16.3.0-alpha.1"]
   },
   {
     "platformVersion": "0.17.x",
@@ -234,11 +209,10 @@
       "react-native-location@0.27.0",
       "react-native-fbsdk@0.7.0",
       "react-native-electrode-ota@0.0.1",
-      "react-native-search-bar@3.4.2"
+      "react-native-search-bar@3.4.2",
+      "react-native-simple-toast@0.0.8"
     ],
-    "targetJsDependencies": [
-      "react@16.3.1"
-    ]
+    "targetJsDependencies": ["react@16.3.1"]
   },
   {
     "platformVersion": "0.18.x",
@@ -262,11 +236,10 @@
       "react-native-location@0.27.0",
       "react-native-fbsdk@0.7.0",
       "react-native-electrode-ota@0.0.1",
-      "react-native-search-bar@3.4.2"
+      "react-native-search-bar@3.4.2",
+      "react-native-simple-toast@0.0.8"
     ],
-    "targetJsDependencies": [
-      "react@16.3.1"
-    ]
+    "targetJsDependencies": ["react@16.3.1"]
   },
   {
     "platformVersion": "0.19.x",
@@ -291,11 +264,10 @@
       "react-native-fbsdk@0.7.0",
       "react-native-electrode-ota@0.0.1",
       "react-native-image-picker@0.26.10",
-      "react-native-search-bar@3.4.2"
+      "react-native-search-bar@3.4.2",
+      "react-native-simple-toast@0.0.8"
     ],
-    "targetJsDependencies": [
-      "react@16.3.1"
-    ]
+    "targetJsDependencies": ["react@16.3.1"]
   },
   {
     "platformVersion": "0.20.x",
@@ -320,11 +292,10 @@
       "react-native-fbsdk@0.7.0",
       "react-native-electrode-ota@0.0.1",
       "react-native-image-picker@0.26.10",
-      "react-native-search-bar@3.4.2"
+      "react-native-search-bar@3.4.2",
+      "react-native-simple-toast@0.0.8"
     ],
-    "targetJsDependencies": [
-      "react@16.3.1"
-    ]
+    "targetJsDependencies": ["react@16.3.1"]
   },
   {
     "platformVersion": "0.21.x",
@@ -349,13 +320,12 @@
       "react-native-fbsdk@0.7.0",
       "react-native-electrode-ota@0.0.1",
       "react-native-image-picker@0.26.10",
-      "react-native-search-bar@3.4.2"
+      "react-native-search-bar@3.4.2",
+      "react-native-simple-toast@0.0.8"
     ],
-    "targetJsDependencies": [
-      "react@16.3.1"
-    ]
+    "targetJsDependencies": ["react@16.3.1"]
   },
-   {
+  {
     "platformVersion": "0.22.x",
     "targetNativeDependencies": [
       "react-native@0.55.4",
@@ -378,11 +348,10 @@
       "react-native-fbsdk@0.7.0",
       "react-native-electrode-ota@0.0.1",
       "react-native-image-picker@0.26.10",
-      "react-native-search-bar@3.4.2"
+      "react-native-search-bar@3.4.2",
+      "react-native-simple-toast@0.0.8"
     ],
-    "targetJsDependencies": [
-      "react@16.3.1"
-    ]
+    "targetJsDependencies": ["react@16.3.1"]
   },
   {
     "platformVersion": "0.23.x",
@@ -407,11 +376,10 @@
       "react-native-fbsdk@0.7.0",
       "react-native-electrode-ota@0.0.1",
       "react-native-image-picker@0.26.10",
-      "react-native-search-bar@3.4.2"
+      "react-native-search-bar@3.4.2",
+      "react-native-simple-toast@0.0.8"
     ],
-    "targetJsDependencies": [
-      "react@16.3.1"
-    ]
+    "targetJsDependencies": ["react@16.3.1"]
   },
   {
     "platformVersion": "0.24.x",
@@ -436,11 +404,10 @@
       "react-native-fbsdk@0.7.0",
       "react-native-electrode-ota@0.0.1",
       "react-native-image-picker@0.26.10",
-      "react-native-search-bar@3.4.2"
+      "react-native-search-bar@3.4.2",
+      "react-native-simple-toast@0.0.8"
     ],
-    "targetJsDependencies": [
-      "react@16.4.1"
-    ]
+    "targetJsDependencies": ["react@16.4.1"]
   },
   {
     "platformVersion": "1000.0.0",
@@ -465,10 +432,9 @@
       "react-native-fbsdk@0.7.0",
       "react-native-electrode-ota@0.0.1",
       "react-native-image-picker@0.26.10",
-      "react-native-search-bar@3.4.2"
+      "react-native-search-bar@3.4.2",
+      "react-native-simple-toast@0.0.8"
     ],
-    "targetJsDependencies": [
-      "react@16.4.1"
-    ]
+    "targetJsDependencies": ["react@16.4.1"]
   }
 ]
