--- a/plugins/ern_v0.41.0+/react-native_v0.61.0+/Podfile
+++ b/plugins/ern_v0.41.0+/react-native_v0.61.0+/Podfile
@@ -1,39 +1,38 @@
 platform :ios, '9.0'
-require_relative './node_modules/@react-native-community/cli-platform-ios/native_modules'
+require_relative '{{{nodeModulesRelativePath}}}/@react-native-community/cli-platform-ios/native_modules'
 
-target 'ElectrodeContainer' do
+target '{{{projectName}}}' do
+  # Pods for {{{projectName}}}
+  pod 'FBLazyVector', :path => "{{{nodeModulesRelativePath}}}/react-native/Libraries/FBLazyVector"
+  pod 'FBReactNativeSpec', :path => "{{{nodeModulesRelativePath}}}/react-native/Libraries/FBReactNativeSpec"
+  pod 'RCTRequired', :path => "{{{nodeModulesRelativePath}}}/react-native/Libraries/RCTRequired"
+  pod 'RCTTypeSafety', :path => "{{{nodeModulesRelativePath}}}/react-native/Libraries/TypeSafety"
+  pod 'React', :path => '{{{nodeModulesRelativePath}}}/react-native/'
+  pod 'React-Core', :path => '{{{nodeModulesRelativePath}}}/react-native/'
+  pod 'React-CoreModules', :path => '{{{nodeModulesRelativePath}}}/react-native/React/CoreModules'
+  pod 'React-Core/DevSupport', :path => '{{{nodeModulesRelativePath}}}/react-native/'
+  pod 'React-RCTActionSheet', :path => '{{{nodeModulesRelativePath}}}/react-native/Libraries/ActionSheetIOS'
+  pod 'React-RCTAnimation', :path => '{{{nodeModulesRelativePath}}}/react-native/Libraries/NativeAnimation'
+  pod 'React-RCTBlob', :path => '{{{nodeModulesRelativePath}}}/react-native/Libraries/Blob'
+  pod 'React-RCTImage', :path => '{{{nodeModulesRelativePath}}}/react-native/Libraries/Image'
+  pod 'React-RCTLinking', :path => '{{{nodeModulesRelativePath}}}/react-native/Libraries/LinkingIOS'
+  pod 'React-RCTNetwork', :path => '{{{nodeModulesRelativePath}}}/react-native/Libraries/Network'
+  pod 'React-RCTSettings', :path => '{{{nodeModulesRelativePath}}}/react-native/Libraries/Settings'
+  pod 'React-RCTText', :path => '{{{nodeModulesRelativePath}}}/react-native/Libraries/Text'
+  pod 'React-RCTVibration', :path => '{{{nodeModulesRelativePath}}}/react-native/Libraries/Vibration'
+  pod 'React-Core/RCTWebSocket', :path => '{{{nodeModulesRelativePath}}}/react-native/'
   
-  # Pods for ElectrodeContainer
-  pod 'FBLazyVector', :path => "node_modules/react-native/Libraries/FBLazyVector"
-  pod 'FBReactNativeSpec', :path => "node_modules/react-native/Libraries/FBReactNativeSpec"
-  pod 'RCTRequired', :path => "node_modules/react-native/Libraries/RCTRequired"
-  pod 'RCTTypeSafety', :path => "node_modules/react-native/Libraries/TypeSafety"
-  pod 'React', :path => 'node_modules/react-native/'
-  pod 'React-Core', :path => 'node_modules/react-native/'
-  pod 'React-CoreModules', :path => 'node_modules/react-native/React/CoreModules'
-  pod 'React-Core/DevSupport', :path => 'node_modules/react-native/'
-  pod 'React-RCTActionSheet', :path => 'node_modules/react-native/Libraries/ActionSheetIOS'
-  pod 'React-RCTAnimation', :path => 'node_modules/react-native/Libraries/NativeAnimation'
-  pod 'React-RCTBlob', :path => 'node_modules/react-native/Libraries/Blob'
-  pod 'React-RCTImage', :path => 'node_modules/react-native/Libraries/Image'
-  pod 'React-RCTLinking', :path => 'node_modules/react-native/Libraries/LinkingIOS'
-  pod 'React-RCTNetwork', :path => 'node_modules/react-native/Libraries/Network'
-  pod 'React-RCTSettings', :path => 'node_modules/react-native/Libraries/Settings'
-  pod 'React-RCTText', :path => 'node_modules/react-native/Libraries/Text'
-  pod 'React-RCTVibration', :path => 'node_modules/react-native/Libraries/Vibration'
-  pod 'React-Core/RCTWebSocket', :path => 'node_modules/react-native/'
+  pod 'React-cxxreact', :path => '{{{nodeModulesRelativePath}}}/react-native/ReactCommon/cxxreact'
+  pod 'React-jsi', :path => '{{{nodeModulesRelativePath}}}/react-native/ReactCommon/jsi'
+  pod 'React-jsiexecutor', :path => '{{{nodeModulesRelativePath}}}/react-native/ReactCommon/jsiexecutor'
+  pod 'React-jsinspector', :path => '{{{nodeModulesRelativePath}}}/react-native/ReactCommon/jsinspector'
+  pod 'ReactCommon/jscallinvoker', :path => "{{{nodeModulesRelativePath}}}/react-native/ReactCommon"
+  pod 'ReactCommon/turbomodule/core', :path => "{{{nodeModulesRelativePath}}}/react-native/ReactCommon"
+  pod 'Yoga', :path => '{{{nodeModulesRelativePath}}}/react-native/ReactCommon/yoga'
   
-  pod 'React-cxxreact', :path => 'node_modules/react-native/ReactCommon/cxxreact'
-  pod 'React-jsi', :path => 'node_modules/react-native/ReactCommon/jsi'
-  pod 'React-jsiexecutor', :path => 'node_modules/react-native/ReactCommon/jsiexecutor'
-  pod 'React-jsinspector', :path => 'node_modules/react-native/ReactCommon/jsinspector'
-  pod 'ReactCommon/jscallinvoker', :path => "node_modules/react-native/ReactCommon"
-  pod 'ReactCommon/turbomodule/core', :path => "node_modules/react-native/ReactCommon"
-  pod 'Yoga', :path => 'node_modules/react-native/ReactCommon/yoga'
-  
-  pod 'DoubleConversion', :podspec => 'node_modules/react-native/third-party-podspecs/DoubleConversion.podspec'
-  pod 'glog', :podspec => 'node_modules/react-native/third-party-podspecs/glog.podspec'
-  pod 'Folly', :podspec => 'node_modules/react-native/third-party-podspecs/Folly.podspec'
+  pod 'DoubleConversion', :podspec => '{{{nodeModulesRelativePath}}}/react-native/third-party-podspecs/DoubleConversion.podspec'
+  pod 'glog', :podspec => '{{{nodeModulesRelativePath}}}/react-native/third-party-podspecs/glog.podspec'
+  pod 'Folly', :podspec => '{{{nodeModulesRelativePath}}}/react-native/third-party-podspecs/Folly.podspec'
 
   {{{extraPods}}}
   
