--- a/manifest.json
+++ b/manifest.json
@@ -1353,6 +1353,62 @@
     ]
   },
   {
+    "platformVersion": "0.43.x",
+    "targetNativeDependencies": [
+      "react-native@0.63.2",
+      "react-native-electrode-bridge@1.5.25",
+      "react-native-maps@0.27.1",
+      "react-native-vector-icons@6.6.0",
+      "react-native-linear-gradient@2.5.6",
+      "react-native-code-push@6.2.0",
+      "react-native-android-settings-library@1.0.6",
+      "react-native-llimageview@2.0.4",
+      "react-native-llphotoassets@0.1.14",
+      "react-native-lluploader@0.4.6",
+      "react-native-svg@12.1.0",
+      "react-native-exif@0.4.0",
+      "react-native-view-shot@3.1.2",
+      "react-native-camera@3.25.0",
+      "react-native-permissions@2.0.10",
+      "react-native-keep-awake@4.0.0",
+      "react-native-location@2.5.0",
+      "react-native-image-picker@2.3.1",
+      "react-native-search-bar@3.5.1",
+      "react-native-simple-toast@1.1.0",
+      "react-native-view-overflow@0.0.5",
+      "react-native-photo-view@1.5.2",
+      "react-native-wkwebview-reborn@2.0.0",
+      "react-native-device-info@5.4.0",
+      "react-native-version-number@0.3.6",
+      "appcenter-analytics@3.0.1",
+      "appcenter@3.0.1",
+      "appcenter-crashes@3.0.1",
+      "lottie-ios@3.1.6",
+      "lottie-react-native@3.3.2",
+      "react-native-android-wifi@0.0.41",
+      "react-native-fs@2.16.6",
+      "react-native-gesture-handler@1.6.1",
+      "react-native-network-info@5.2.1",
+      "react-native-orientation@3.1.3",
+      "react-native-pdf@6.1.1",
+      "rn-fetch-blob@0.12.0",
+      "@react-native-community/cameraroll@1.1.2",
+      "@react-native-community/datetimepicker@2.3.2",
+      "react-native-sound@0.11.0",
+      "react-native-sentry@0.43.2",
+      "react-native-admob@1.3.2",
+      "realm@5.0.3",
+      "react-native-fast-image@8.1.5",
+      "@react-native-community/async-storage@1.9.0",
+      "@react-native-community/netinfo@5.7.0",
+      "@react-native-community/geolocation@2.0.2",
+      "react-native-fbsdk@1.1.2"
+    ],
+    "targetJsDependencies": [
+      "react@16.13.1"
+    ]
+  },
+  {
     "platformVersion": "1000.0.0",
     "targetNativeDependencies": [
       "react-native@0.63.2",
