--- a/manifest.json
+++ b/manifest.json
@@ -1478,6 +1478,7 @@
       "@react-native-community/cameraroll@1.1.2",
       "@react-native-community/datetimepicker@2.3.2",
       "@react-native-community/geolocation@2.0.2",
+      "@react-native-community/masked-view@0.1.10",
       "@react-native-community/netinfo@5.7.0",
       "@react-native-firebase/analytics@7.4.1",
       "@react-native-firebase/app@8.3.0",
@@ -1540,6 +1541,7 @@
       "@react-native-community/cameraroll@1.1.2",
       "@react-native-community/datetimepicker@2.3.2",
       "@react-native-community/geolocation@2.0.2",
+      "@react-native-community/masked-view@0.1.10",
       "@react-native-community/netinfo@5.7.0",
       "@react-native-firebase/analytics@7.4.1",
       "@react-native-firebase/app@8.3.0",
