--- a/manifest.json
+++ b/manifest.json
@@ -1512,6 +1512,7 @@
       "react-native-lluploader@0.4.6",
       "react-native-location@2.5.0",
       "react-native-maps@0.27.1",
+      "react-native-msal@3.0.4",
       "react-native-network-info@5.2.1",
       "react-native-orientation@3.1.3",
       "react-native-pdf@6.1.1",
@@ -1579,6 +1580,7 @@
       "react-native-lluploader@0.4.6",
       "react-native-location@2.5.0",
       "react-native-maps@0.27.1",
+      "react-native-msal@3.0.4",
       "react-native-network-info@5.2.1",
       "react-native-orientation@3.1.3",
       "react-native-pdf@6.1.1",
