--- a/manifest.json
+++ b/manifest.json
@@ -1481,6 +1481,8 @@
       "@react-native-community/geolocation@2.0.2",
       "@react-native-community/masked-view@0.1.10",
       "@react-native-community/netinfo@5.7.0",
+      "@react-native-community/progress-bar-android@1.0.3",
+      "@react-native-community/progress-view@1.0.3",
       "@react-native-firebase/analytics@7.4.1",
       "@react-native-firebase/app@8.3.0",
       "@react-native-firebase/crashlytics@8.3.0",
@@ -1546,6 +1548,8 @@
       "@react-native-community/geolocation@2.0.2",
       "@react-native-community/masked-view@0.1.10",
       "@react-native-community/netinfo@5.7.0",
+      "@react-native-community/progress-bar-android@1.0.3",
+      "@react-native-community/progress-view@1.0.3",
       "@react-native-firebase/analytics@7.4.1",
       "@react-native-firebase/app@8.3.0",
       "@react-native-firebase/crashlytics@8.3.0",
