--- a/plugins/ern_v0.45.0+/react-native_v0.62.0+/Podfile
+++ b/plugins/ern_v0.45.0+/react-native_v0.62.0+/Podfile
@@ -1,6 +1,10 @@
 platform :ios, '{{{iosDeploymentTarget}}}'
 require_relative '{{{nodeModulesRelativePath}}}/@react-native-community/cli-platform-ios/native_modules'
 
+{{#extraPodspecsSources}}
+{{{.}}}
+{{/extraPodspecsSources}}
+
 target '{{{projectName}}}' do
   # Pods for {{{projectName}}}
   pod 'FBLazyVector', :path => "{{{nodeModulesRelativePath}}}/react-native/Libraries/FBLazyVector"
