--- a/plugins/ern_v0.39.0+/react-native-screens_v2.17.1+/config.json
+++ b/plugins/ern_v0.39.0+/react-native-screens_v2.17.1+/config.json
@@ -2,8 +2,17 @@
   "android": {
     "root": "android",
     "dependencies": [
-      "com.google.android.material:material:1.1.0",
-      "androidx.coordinatorlayout:coordinatorlayout:1.1.0"
+      "androidx.appcompat:appcompat:1.1.0",
+      "androidx.fragment:fragment:1.2.1",
+      "androidx.coordinatorlayout:coordinatorlayout:1.1.0",
+      "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0",
+      "com.google.android.material:material:1.1.0"
+    ],
+    "copy": [
+      {
+        "source": "android/src/main/res/*",
+        "dest": "lib/src/main/res/screens"
+      }
     ]
   },
   "ios": {
