Fix react-native-gesture-handler android plugin configuration

--- a/plugins/ern_v0.14.0+/react-native-gesture-handler_v1.4.1+/config.json
+++ b/plugins/ern_v0.14.0+/react-native-gesture-handler_v1.4.1+/config.json
@@ -1,6 +1,12 @@
 {
   "android": {
     "root": "android",
+    "copy": [
+      {
+        "source": "android/lib/src/main/java/com/swmansion/gesturehandler/*",
+        "dest": "lib/src/main/java/com/swmansion/gesturehandler"
+      }
+    ],
     "dependencies": []
   },
   "ios": {
