--- a/manifest.json
+++ b/manifest.json
@@ -1722,6 +1722,7 @@
       "react-native-msal@3.0.4",
       "react-native-network-info@5.2.1",
       "react-native-orientation@3.1.3",
+      "react-native-pager-view@5.1.7",
       "react-native-pdf@6.1.1",
       "react-native-permissions@2.0.10",
       "react-native-photo-view@1.5.2",
