--- a/manifest.json
+++ b/manifest.json
@@ -1575,6 +1575,7 @@
       "react-native-gesture-handler@1.6.1",
       "react-native-image-picker@2.3.4",
       "react-native-keep-awake@4.0.0",
+      "react-native-keyevent@0.2.8",
       "react-native-linear-gradient@2.5.6",
       "react-native-llimageview@2.0.4",
       "react-native-llphotoassets@0.1.14",
@@ -1644,6 +1645,7 @@
       "react-native-gesture-handler@1.6.1",
       "react-native-image-picker@2.3.4",
       "react-native-keep-awake@4.0.0",
+      "react-native-keyevent@0.2.8",
       "react-native-linear-gradient@2.5.6",
       "react-native-llimageview@2.0.4",
       "react-native-llphotoassets@0.1.14",
@@ -1713,6 +1715,7 @@
       "react-native-gesture-handler@1.6.1",
       "react-native-image-picker@2.3.4",
       "react-native-keep-awake@4.0.0",
+      "react-native-keyevent@0.2.8",
       "react-native-linear-gradient@2.5.6",
       "react-native-llimageview@2.0.4",
       "react-native-llphotoassets@0.1.14",
@@ -1783,6 +1786,7 @@
       "react-native-gesture-handler@1.6.1",
       "react-native-image-picker@2.3.4",
       "react-native-keep-awake@4.0.0",
+      "react-native-keyevent@0.2.8",
       "react-native-linear-gradient@2.5.6",
       "react-native-llimageview@2.0.4",
       "react-native-llphotoassets@0.1.14",
