--- a/manifest.json
+++ b/manifest.json
@@ -1715,6 +1715,7 @@
       "react-native-gesture-handler@1.6.1",
       "react-native-image-picker@2.3.4",
       "react-native-keep-awake@4.0.0",
+      "react-native-keychain@8.0.0",
       "react-native-keyevent@0.2.8",
       "react-native-linear-gradient@2.5.6",
       "react-native-llimageview@2.0.4",
@@ -1786,6 +1787,7 @@
       "react-native-gesture-handler@1.6.1",
       "react-native-image-picker@2.3.4",
       "react-native-keep-awake@4.0.0",
+      "react-native-keychain@8.0.0",
       "react-native-keyevent@0.2.8",
       "react-native-linear-gradient@2.5.6",
       "react-native-llimageview@2.0.4",
