--- a/plugins/ern_v0.46.0+/react-native-keychain_v6.0.0+/config.json
+++ b/plugins/ern_v0.46.0+/react-native-keychain_v6.0.0+/config.json
@@ -2,10 +2,12 @@
   "android": {
     "root": "android",
     "dependencies": [
-      "implementation 'androidx.biometric:biometric:1.1.0'",
-      "implementation 'androidx.lifecycle:lifecycle-viewmodel:2.3.1'",
-      "implementation 'androidx.fragment:fragment:1.3.2'",
-      "implementation 'com.facebook.conceal:conceal:1.1.3'"
+      "implementation 'androidx.biometric:biometric:1.0.1'",
+      "implementation 'com.facebook.conceal:conceal:1.1.3@aar'"
+    ],
+    "permissions": [
+      "android.permission.USE_BIOMETRIC",
+      "android.permission.USE_FINGERPRINT"
     ]
   },
   "ios": {
