--- a/manifest.json
+++ b/manifest.json
@@ -1756,6 +1756,79 @@
     ]
   },
   {
+    "platformVersion": "0.49.x",
+    "targetNativeDependencies": [
+      "@react-native-community/async-storage@1.9.0",
+      "@react-native-community/cameraroll@1.1.2",
+      "@react-native-community/clipboard@1.2.3",
+      "@react-native-community/datetimepicker@2.3.2",
+      "@react-native-community/geolocation@2.0.2",
+      "@react-native-community/masked-view@0.1.10",
+      "@react-native-community/netinfo@5.7.0",
+      "@react-native-community/progress-bar-android@1.0.3",
+      "@react-native-community/progress-view@1.0.3",
+      "@react-native-firebase/analytics@7.4.1",
+      "@react-native-firebase/app@8.3.0",
+      "@react-native-firebase/crashlytics@8.3.0",
+      "appcenter-analytics@4.0.2",
+      "appcenter-crashes@4.0.2",
+      "appcenter@4.0.2",
+      "lottie-ios@3.1.6",
+      "lottie-react-native@3.3.2",
+      "react-native@0.66.4",
+      "react-native-admob@1.3.2",
+      "react-native-android-settings-library@1.0.6",
+      "react-native-android-wifi@0.0.41",
+      "react-native-camera@4.0.3",
+      "react-native-code-push@6.2.0",
+      "react-native-device-info@5.6.3",
+      "react-native-electrode-bridge@1.5.27",
+      "react-native-exif@0.4.0",
+      "react-native-fast-image@8.1.5",
+      "react-native-fbads@7.0.5",
+      "react-native-fbsdk@1.1.2",
+      "react-native-fs@2.16.6",
+      "react-native-gesture-handler@1.6.1",
+      "react-native-image-picker@2.3.4",
+      "react-native-keep-awake@4.0.0",
+      "react-native-keychain@6.0.0",
+      "react-native-keyevent@0.2.8",
+      "react-native-linear-gradient@2.5.6",
+      "react-native-llimageview@2.0.4",
+      "react-native-llphotoassets@0.1.14",
+      "react-native-lluploader@0.4.6",
+      "react-native-location@2.5.0",
+      "react-native-pager-view@5.1.7",
+      "react-native-maps@0.27.1",
+      "react-native-msal@3.0.4",
+      "react-native-network-info@5.2.1",
+      "react-native-orientation@3.1.3",
+      "react-native-pdf@6.1.1",
+      "react-native-permissions@2.0.10",
+      "react-native-photo-view@1.5.2",
+      "react-native-reanimated@1.8.0",
+      "react-native-restart@0.0.20",
+      "react-native-safe-area-context@3.0.3",
+      "react-native-screens@2.7.0",
+      "react-native-search-bar@3.5.1",
+      "react-native-sentry@0.43.2",
+      "react-native-simple-toast@1.1.0",
+      "react-native-sound@0.11.0",
+      "react-native-svg@12.1.0",
+      "react-native-vector-icons@6.6.0",
+      "react-native-version-number@0.3.6",
+      "react-native-video@4.4.5",
+      "react-native-view-overflow@0.0.5",
+      "react-native-view-shot@3.1.2",
+      "react-native-wkwebview-reborn@2.0.0",
+      "realm@5.0.3",
+      "rn-fetch-blob@0.12.0"
+    ],
+    "targetJsDependencies": [
+      "react@17.0.2"
+    ]
+  },
+  {
     "platformVersion": "1000.0.0",
     "targetNativeDependencies": [
       "@react-native-community/async-storage@1.9.0",
