--- a/manifest.json
+++ b/manifest.json
@@ -1856,7 +1856,7 @@
       "appcenter-analytics@4.4.3",
       "appcenter-crashes@4.4.3",
       "appcenter@4.4.3",
-      "ern-container-publisher-maven@2.0.0",
+      "ern-container-publisher-maven@^2.0.0",
       "ern-navigation@^2.1.0",
       "lottie-ios@3.1.6",
       "lottie-react-native@3.3.2",
@@ -1931,7 +1931,7 @@
       "appcenter-analytics@4.4.3",
       "appcenter-crashes@4.4.3",
       "appcenter@4.4.3",
-      "ern-container-publisher-maven@2.0.0",
+      "ern-container-publisher-maven@^2.0.0",
       "ern-navigation@^2.1.0",
       "lottie-ios@3.1.6",
       "lottie-react-native@3.3.2",
