--- a/manifest.json
+++ b/manifest.json
@@ -1607,6 +1607,7 @@
       "react-native-video@4.4.5",
       "react-native-view-overflow@0.0.5",
       "react-native-view-shot@3.1.2",
+      "react-native-webview@11.26.1",
       "react-native-wkwebview-reborn@2.0.0",
       "realm@5.0.3",
       "rn-fetch-blob@0.12.0"
@@ -1680,6 +1681,7 @@
       "react-native-video@4.4.5",
       "react-native-view-overflow@0.0.5",
       "react-native-view-shot@3.1.2",
+      "react-native-webview@11.26.1",
       "react-native-wkwebview-reborn@2.0.0",
       "realm@5.0.3",
       "rn-fetch-blob@0.12.0"
@@ -1755,6 +1757,7 @@
       "react-native-video@4.4.5",
       "react-native-view-overflow@0.0.5",
       "react-native-view-shot@3.1.2",
+      "react-native-webview@11.26.1",
       "react-native-wkwebview-reborn@2.0.0",
       "realm@5.0.3",
       "rn-fetch-blob@0.12.0"
@@ -1830,6 +1833,7 @@
       "react-native-video@4.4.5",
       "react-native-view-overflow@0.0.5",
       "react-native-view-shot@3.1.2",
+      "react-native-webview@11.26.1",
       "react-native-wkwebview-reborn@2.0.0",
       "realm@5.0.3",
       "rn-fetch-blob@0.12.0"
@@ -1905,6 +1909,7 @@
       "react-native-video@4.4.5",
       "react-native-view-overflow@0.0.5",
       "react-native-view-shot@3.1.2",
+      "react-native-webview@11.26.1",
       "react-native-wkwebview-reborn@2.0.0",
       "realm@5.0.3",
       "rn-fetch-blob@0.12.0"
@@ -1980,6 +1985,7 @@
       "react-native-video@4.4.5",
       "react-native-view-overflow@0.0.5",
       "react-native-view-shot@3.1.2",
+      "react-native-webview@11.26.1",
       "react-native-wkwebview-reborn@2.0.0",
       "realm@5.0.3",
       "rn-fetch-blob@0.12.0"
